# SnipleSolanaBot

./: .env  .env.backup.20250708_171438  .env.micro-lightning  .gitignore  CHIMERA_IMPLEMENTATION_REPORT.md  CRITICAL_AUDIT_REPORT.md  Cargo.toml  Cargo.toml.backup_20250712_112640  Cargo.toml.backup_20250712_112829  Dockerfile  Dockerfile.micro-lightning  EMERGENCY_SECURITY_FIX.md  FINAL_AUDIT_SUMMARY.md  FORGE_PHASE2_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PHOENIX_ASCENDANT_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT.md  PROJECT-SUMMARY.md  QUANTUM-SECURITY-COMPLETE.md  README.md  SNIPLE_IMPLEMENTATION_SUMMARY.md  VAULT-SECURITY.md  cleanup-env-files.sh  deploy-production.sh  docker-compose.yml  extract-wallet-key.sh  infisical-setup.sh  migrate-secrets-to-infisical.sh  phoenix_demo.rs  phoenix_simple_demo.py  project-structure.txt  run-ai-test.sh  sbom.json  security-hardening.sh  security-vault-hardening.sh  start-overmind-quantum.sh  start-overmind-secure.sh  test-api-keys.sh  test-quantum-security.sh  test-vault-security.sh  (+4 more)
.augment/rules/imported/: CHIMERA_IMPLEMENTATION_REPORT.md  FORGE_PHASE2_SUMMARY.md  (+7 more)
.github/workflows/: forge.yml
artifacts/chimera_test/: arbitrage_strategy.dsl  market_making_strategy.dsl  mean_reversion_strategy.dsl  momentum_strategy.dsl  sentiment_strategy.dsl
benches/: overmind_benchmarks.rs  resolver_benchmarks.rs
chimera_client/: Cargo.toml  README.md
chimera_client/examples/: basic_usage.rs  overmind_integration.rs
chimera_client/src/: backoff.rs  circuit_breaker.rs  client.rs  fallback.rs  lib.rs  types.rs
chimera_client/tests/: integration_tests.rs
config/: alert_rules.yml  alertmanager.yml  base.toml  demo_config.toml  forge-config.toml  micro-lightning-alerts.yml  monitoring.yml  network-security.yaml  production-vault.env  production.env.template  prometheus-micro-lightning.yml  prometheus.yml  risk-management.yml  tensorzero.toml  validation_protocol.toml
context_manifests/: README.md
context_manifests/agents/: attack_planner_agent.toml  risk_agent.toml  sentiment_agent.toml
context_manifests/workflows/: contextualized_swarm_execution.yml  e2e_context_engineering_test.yml
docs/: API_KEYS_SETUP.md  CONTEXT7_INTEGRATION.md  CYBER_KNOWLEDGE_VAULT.md  HELIUS_JITO_V2_INTEGRATION.md  KESTRA_ORCHESTRATION.md  MICRO_LIGHTNING_SYSTEM.md  NVIDIA_DATA_FLYWHEEL_INTEGRATION.md  SNIPLE_SOLANA_BOT_ENHANCED.md  testing-guide.md
examples/: micro_lightning_demo.rs  overmind_basic_usage.rs  sniple_solana_bot_demo.rs
infrastructure/: vpc-setup.tf
kestra/flows/: overmind-daily-startup.yaml  overmind-rpc-failover.yaml
overmind_cortex/: Cargo.toml
overmind_cortex/src/: agents.rs  amd_kernel.rs  atomic_sentiment.rs  core.rs  dispatcher.rs  e2e_tests.rs  hardware_accel.rs  lib.rs  sub_millisecond_e2e.rs  swarm.rs  zero_copy_v2.rs
prompts/: performance_analysis.txt  risk_assessment.txt  strategy_generation.txt
scripts/: compile-sentiment-agent.sh  setup-forge.sh  start-micro-lightning.sh  stop-micro-lightning.sh  validate_context_engineering.sh
secrets/: demo_api_key.enc  demo_private_key.enc  metadata.json
secure-vault/: setup_secure_cold_storage.sh
src/: config.rs  lib.rs  main.rs
src/agents/: dynamic_agent.rs  mod.rs  runtime_loader.rs
src/ai/: chimera_client.rs  hardware_accel.rs
src/autoschema/: mod.rs
src/cargo_resolver/: mod.rs
src/compliance/: mica_validator.rs
src/config/: env_loader.rs
src/cryptoinsight/: anti_mev_shield.rs  cognitive_cortex.rs  feature_store.rs  jito_streamer.rs  mod.rs  pump_fun_monitor.rs  warden_integration.rs
src/forge/: autonomous_evolution.rs  dsl_generator.rs  formal_verification.rs  hot_loader.rs  mod.rs  strategy_compiler.rs  tensorzero_gateway.rs
src/geohot/: chimera_core.rs  ghost_protocol.rs  helius_stream.rs  mod.rs
src/integrations/: jito_mev.rs
src/memory/: disaster_recovery.rs  episodic_storage.rs  gpu_embeddings.rs  jito_integration.rs  mod.rs  security_vault.rs  working_memory.rs
src/models/: ai_models.rs  market_models.rs  mod.rs
src/modules/: advanced_mev_engine.rs  advanced_mev_strategies.rs  advanced_risk_management.rs  ai_connector.rs  cluster_orchestrator.rs  cross_dex_arbitrage.rs  data_ingestor.rs  deepseek_connector.rs  dev_tracker.rs  dex_aggregator.rs  dex_integration.rs  dynamic_position_sizing.rs  dynamic_wallet_generator.rs  encrypted_key_storage.rs  enhanced_ai_brain.rs  error_handling.rs  executor.rs  helius_streamer.rs  hft_engine.rs  hybrid_price_fetcher.rs  jina_ai_connector.rs  jito_bundler.rs  jito_client.rs  jito_v2_client.rs  jupiter_dex.rs  liquidity_sniping.rs  market_data.rs  memory_optimizer.rs  meteora_damm.rs  metrics.rs  mev_arbitrage.rs  mod.rs  multi_wallet_config.rs  multi_wallet_executor.rs  multi_wallet_load_balancer.rs  overmind_mev_pipeline.rs  performance_optimizer.rs  portfolio_rebalancer.rs  profit_manager.rs  real_price_fetcher.rs  (+15 more)
src/neural_execution/: atomic_executor.rs  execution_monitor.rs  hardware_accelerator.rs  mod.rs  neural_predictor.rs  neural_router.rs
src/nexus/: collective_consciousness.rs  mod.rs  neural_plasticity.rs  quantum_mesh.rs  swarm_singularity.rs
src/optimizations/: memory.rs
src/overmind/: ai_engine.rs  cortex.rs  evolution.rs  genetic_modifier.rs  knowledge_graph.rs  leaderboard.rs  mod.rs  mutation_guard.rs  optimization.rs  swarm.rs  validation_protocol.rs
src/pheromind/: genesis_analyzer.rs  mod.rs  pheromone_bus.rs  quantum_signer.rs
src/security/: ai_monitor.rs  blockchain_vault.rs  dragonflydb_cache.rs  homomorphic.rs  infisical_client.rs  infisical_vault.rs  mod.rs  quantum_safe.rs  quantum_vault.rs  transaction_guard.rs  zero_trust.rs
src/swarmagentic/: mod.rs
strategies/: momentum_v1.dsl  sentiment_agent_v1.dsl
tests/: cargo_dependency_resolver_tests.rs  faza11_swarm_genesis_tests.rs  integration_tests.rs  micro_lightning_tests.rs  overmind_integration_tests.rs  overmind_mev_performance_test.rs  overmind_performance_tests.rs  overmind_unit_tests.rs  sniple_enhanced_tests.rs
wallets/: conservative-wallet.json  devnet-test-wallet.json  mainnet-trading-wallet.json
(+29 files in other folders)
