[workspace]
members = [".", "chimera_client", "overmind_cortex"]
resolver = "2"

[package]
name = "overmind-protocol"
version = "4.1.0"
edition = "2021"
authors = ["THE OVERMIND PROTOCOL Team"]
description = "THE OVERMIND PROTOCOL v4.1 'MONOLITH' - Autonomous AI Trading System"
license = "MIT"
repository = "https://github.com/SynergiaOS/TradingBot-Clean"

[lib]
name = "overmind_protocol"
path = "src/lib.rs"

[[bin]]
name = "overmind-protocol"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }

# Solana blockchain
solana-sdk = "1.18"
solana-client = "1.18"



# Web framework
axum = "0.7"

# Serialization - HOTZ PHILOSOPHY: Keeping serde_json for compatibility
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tinyjson = "2.5"



# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Database - REMOVED for HOTZ PHILOSOPHY (use Redis for state)

# HTTP client - HOTZ PHILOSOPHY: Keeping reqwest for compatibility
reqwest = { version = "0.11", features = ["json"] }
minreq = "2.11"

# WebSocket
tokio-tungstenite = "0.21"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Futures
futures = "0.3"
futures-util = "0.3"

# URL parsing
url = "2.5"

# Environment
dotenvy = "0.15"

# Random number generation - HOTZ PHILOSOPHY: Keeping rand for compatibility
rand = "0.8"
nanorand = "0.7"

# Base58 encoding/decoding for Solana
bs58 = "0.5"

# Hex encoding
hex = "0.4"

# THE OVERMIND PROTOCOL v4.1 "MONOLITH" - AI & ML Libraries
candle-core = { git = "https://github.com/huggingface/candle.git" }
candle-nn = { git = "https://github.com/huggingface/candle.git" }
candle-transformers = { git = "https://github.com/huggingface/candle.git" }
hf-hub = "0.3"
tokenizers = "0.19"

# THE OVERMIND PROTOCOL - Knowledge Graph & Vector DB - REMOVED for HOTZ PHILOSOPHY
# Use in-memory structures instead of heavy dependencies

# THE OVERMIND PROTOCOL - Swarm Agent Framework
async-trait = "0.1"
dashmap = "5.5"
parking_lot = "0.12"

# THE OVERMIND PROTOCOL - Jito Bundle Execution
jito-sdk-rust = "0.2.1"
base64 = "0.22"
bincode = "1.3"

# THE OVERMIND PROTOCOL - DragonflyDB Communication
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "streams", "aio"] }

# THE OVERMIND PROTOCOL - Configuration & Scripting - HOTZ PHILOSOPHY: Minimal config
toml = "0.8"
config = "0.14"
# rhai = "1.17" # REMOVED: Heavy scripting engine

# THE OVERMIND PROTOCOL - SnipleSolanaBot Enhanced Security & Performance
aes-gcm = "0.10"
generic-array = "0.14"
backoff = "0.4"
moka = { version = "0.12", features = ["future"] }
sha2 = "0.10.9"
clap = { version = "4.5.40", features = ["derive"] }
pqcrypto-kyber = "0.8.1"
pqcrypto-traits = "0.3.5"
libloading = "0.8.8"
tempfile = "3.0"

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
proptest = "1.0"
mockall = "0.12"
criterion = { version = "0.5", features = ["html_reports"] }
# tarpaulin = "0.27" # Install separately: cargo install cargo-tarpaulin

# Test utilities
tempfile = "3.0"
wiremock = "0.5"

# THE OVERMIND PROTOCOL - Testing dependencies
axum = "0.7"
futures = "0.3"
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.contabo]
inherits = "release"
opt-level = 3
lto = "fat"

# THE OVERMIND PROTOCOL v4.4 "GEOHOT CORE" - Hotz Philosophy Profiles
[profile.geo_hot]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[[bench]]
name = "overmind_benchmarks"
harness = false

