[workspace]
members = [".", "chimera_client", "overmind_cortex"]
resolver = "2"

[package]
name = "overmind-protocol"
version = "4.1.0"
edition = "2021"
authors = ["THE OVERMIND PROTOCOL Team"]
description = "THE OVERMIND PROTOCOL v4.1 'MONOLITH' - Autonomous AI Trading System"
license = "MIT"
repository = "https://github.com/SynergiaOS/TradingBot-Clean"

[lib]
name = "overmind_protocol"
path = "src/lib.rs"

[[bin]]
name = "overmind-protocol"
path = "src/main.rs"

[[bin]]
name = "micro-lightning-monitor"
path = "src/bin/micro-lightning-monitor.rs"

[[bin]]
name = "phoenix-memcoin-bot"
path = "src/bin/phoenix-memcoin-bot.rs"

[[bin]]
name = "neural-execution-demo"
path = "src/bin/neural-execution-demo.rs"

[[bin]]
name = "neural-execution-optimized-demo"
path = "src/bin/neural-execution-optimized-demo.rs"

[[bin]]
name = "test-qdrant-connection"
path = "test_qdrant_connection.rs"

[[bin]]
name = "test-qdrant-rust-client"
path = "test_qdrant_rust_client.rs"

[[bin]]
name = "test-qdrant-simple"
path = "test_qdrant_simple.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }

# Solana blockchain - UPDATED FOR SECURITY (crypto vulnerabilities fix)
solana-sdk = "2.3"
solana-client = "2.3"



# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Serialization - HOTZ PHILOSOPHY: Keeping serde_json for compatibility
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tinyjson = "2.5"



# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Database - REMOVED for HOTZ PHILOSOPHY (use Redis for state)

# HTTP client - HOTZ PHILOSOPHY: Keeping reqwest for compatibility
reqwest = { version = "0.11", features = ["json"] }
minreq = "2.11"

# WebSocket
tokio-tungstenite = "0.21"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Futures
futures = "0.3"
futures-util = "0.3"

# URL parsing
url = "2.5"

# Environment
dotenvy = "0.15"

# Random number generation - HOTZ PHILOSOPHY: Keeping rand for compatibility
rand = "0.8"
nanorand = "0.7"

# Base58 encoding/decoding for Solana
bs58 = "0.5"

# Hex encoding
hex = "0.4"

# THE OVERMIND PROTOCOL v4.1 "MONOLITH" - AI & ML Libraries
candle-core = { git = "https://github.com/huggingface/candle.git" }
candle-nn = { git = "https://github.com/huggingface/candle.git" }
candle-transformers = { git = "https://github.com/huggingface/candle.git" }
hf-hub = "0.3"
tokenizers = "0.19"

# THE OVERMIND PROTOCOL - Knowledge Graph & Vector DB
qdrant-client = "1.7"  # Much older version to avoid zeroize conflicts

# THE OVERMIND PROTOCOL - Swarm Agent Framework
async-trait = "0.1"
dashmap = "5.5"
parking_lot = "0.12"
crossbeam-channel = "0.5"

# THE OVERMIND PROTOCOL - Jito Bundle Execution - UPDATED FOR COMPATIBILITY
jito-sdk-rust = "0.3.2"
base64 = "0.22"
bincode = "1.3"

# THE OVERMIND PROTOCOL - DragonflyDB Communication
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "streams", "aio"] }

# THE OVERMIND PROTOCOL - Configuration & Scripting - HOTZ PHILOSOPHY: Minimal config
toml = "0.8"
config = "0.14"
# rhai = "1.17" # REMOVED: Heavy scripting engine

# THE OVERMIND PROTOCOL - SnipleSolanaBot Enhanced Security & Performance
aes-gcm = "0.10"
generic-array = "0.14"
exponential-backoff = "2.1"  # SECURITY: Replaced unmaintained backoff
moka = { version = "0.12", features = ["future"] }
sha2 = "0.10.9"
sha3 = "0.10"
clap = { version = "4.5.40", features = ["derive"] }
pqcrypto-mlkem = "0.1"  # SECURITY: Replaced unmaintained pqcrypto-kyber
pqcrypto-traits = "0.3.5"
libloading = "0.8.8"
tempfile = "3.0"
# SECURITY: Additional secure replacements for unmaintained dependencies
is-terminal = "0.4"  # Replaces atty
nu-ansi-term = "0.50"  # Replaces ansi_term

# SECURITY: Force secure crypto dependencies (override Solana SDK vulnerable versions)
curve25519-dalek = "4.1.3"  # CRITICAL: Fix timing attack vulnerability
ed25519-dalek = "2.1.1"     # CRITICAL: Fix double public key signing vulnerability

# SECURITY: Patch vulnerable dependencies to force secure versions
[patch.crates-io]
curve25519-dalek = { version = "4.1.3" }  # Force secure version everywhere
ed25519-dalek = { version = "2.1.1" }     # Force secure version everywhere

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
proptest = "1.0"
mockall = "0.12"
criterion = { version = "0.5", features = ["html_reports"] }
# tarpaulin = "0.27" # Install separately: cargo install cargo-tarpaulin

# Test utilities
tempfile = "3.0"
wiremock = "0.5"

# THE OVERMIND PROTOCOL - Testing dependencies
axum = "0.7"
futures = "0.3"
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.contabo]
inherits = "release"
opt-level = 3
lto = "fat"

# THE OVERMIND PROTOCOL v4.4 "GEOHOT CORE" - Hotz Philosophy Profiles
[profile.geo_hot]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[[bench]]
name = "overmind_benchmarks"
harness = false

